<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_PLC_Interface" Id="{dab371f1-c352-4339-b624-0365e0c17f18}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
    (*ETHERCAT BRRIDGE COM STATUS*)
    //0: Other side is in OP state, >0: Error
    {attribute 'TcLinkTo' := 'TIIB[R20_DRL_03_E14_EL6695]^SYNC Inputs^TxPDO state'}
    bEcatBridge_TxPDO_state AT %I* :BOOL;

    //0: External device connectd, 1: External device not connected
    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^SYNC Inputs^External device not connected'}
    bEcatBridge_External_device_not_connected AT %I* : BOOL;

    //0 = Data valid, 1 = Data invalid
    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^WcState^WcStateIn'}
    bEcatBridge_WcState AT %I* : BOOL;

    (*Inputs from TMO Beamline*)
    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Inputs^HUTCH_PLC_NAME'}
    sHUTCH_PLC_NAME AT %I* : STRING(8);

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Inputs^TMO_MR5K4_VWC_CLOSED_LS'}
    bTMO_MR5K4_VWC_CLOSED_LS AT %I* : BOOL;

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Inputs^TMO_TM2K4_VWC_CLOSED_LS'}
    bTMO_TM2K4_VWC_CLOSED_LS AT %I* : BOOL;

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Inputs^TMO_MR5K4_VWC_OPEN_LS'}
    bTMO_MR5K4_VWC_OPEN_LS AT %I* : BOOL;

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Inputs^TMO_TM2K4_VWC_OPEN_LS'}
    bTMO_TM2K4_VWC_OPEN_LS AT %I* : BOOL;

    (*Outputs to TMO Beamline PLC*)
    {attribute 'TcLinkTo' :=   'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^ENDSTATION_PLC_NAME'}
    sENDSTATION_PLC_NAME AT %Q* : STRING(8):= 'DREAM';

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^DREAM_HV_SAFETY_ENABLE'}
    bDREAM_HV_SAFETY_ENABLE AT %Q* : BOOL;

    {attribute 'TcLInkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^DREAM_TURBOS_ALL_AtSpd'}
    {attribute 'pytmc' := '
        pv: PLC:DREAM:VAC:TURBOS_ALL_ATSPD
        io: i
    '}
    bDREAM_TURBOS_ALL_AtSpd AT %Q* : BOOL;

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^DREAM_MAIN_xAT_VAC'}
    bDREAM_MAIN_xAT_VAC AT %Q* : BOOL;

    {attribute 'TcLInkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^DREAM_MAIN_xPRESS_OK'}
    bDREAM_MAIN_xPRESS_OK AT %Q* : BOOL;

    {attribute 'TcLINKTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^DREAM_MAIN_rPRESS'}
    fDREAM_MAIN_rPRESS AT %Q* : REAL;

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^CLOSE_TMO_MR5K4_VWC'}
    bCLOSE_TMO_MR5K4_VWC AT %Q* : BOOL;

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Outputs^CLOSE_TMO_TM2K4_VWC'}
    bCLOSE_TMO_TM2K4_VWC AT %Q* : BOOL;

    (*ISEG HV Crate Safety Loop*)
    {attribute 'TcLInkTo' :=  'TIIB[K4S8_DRL_04_E14_EL2624]^Channel 4^Output'}
    {attribute 'pytmc' := '
        pv: TMO:PLC:DREAM:VAC:HV_SAFETY_ENABLE
        io:i
    '}
    bHVSafteyLoopEnable AT %Q* : BOOL := FALSE; (*When Enables the High voltage Saftey loop is closed and HV can start.*)

    (*Interlock output to control COIL PS*)
    {attribute 'TcLInkTo' :=  'TIIB[K4S8_DRL_04_E14_EL2624]^Channel 3^Output'}
    {attribute 'pytmc' := '
        pv: PLC:DREAM:COIL_PS:ILK
        io: i
    '}
    bCoilPS_ILK AT %Q* : BOOL := FALSE;

    //Ethercat interface with DREAM motion PLC

     (*ETHERCAT BRRIDGE COM STATUS*)
    //0: Other side is in OP state, >0: Error
    {attribute 'TcLinkTo' := 'TIIB[R20_DRL_03_E15_EL1122]^SYNC Inputs^TxPDO state'}
    bMotEcatBridge_TxPDO_state AT %I* :BOOL;

    //0: External device connectd, 1: External device not connected
    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^SYNC Inputs^External device not connected'}
    bMotEcatBridge_External_device_not_connected AT %I* : BOOL;

    //0 = Data valid, 1 = Data invalid
    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E15_EL1122]^WcState^WcStateIn'}
    bMotEcatBridge_WcState AT %I* : BOOL;

    (*Inputs from DREAM Motion*)
    //{attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E14_EL6695]^IO Inputs^HUTCH_PLC_NAME'}
    //sMOT_PLC_NAME AT %I* : STRING(8);

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E15_EL1122]^IO Outputs^xDREAM_GNZ_Y_OUT'}
    xDREAM_GNZ_Y_OUT AT %I* : BOOL;

    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E15_EL1122]IO Outputs^xDREAM_GNZ_Y_Ext_OUT'}
    xDREAM_GNZ_Y_Ext_OUT AT %I* : BOOL;

    (*Outputs to DREAM Motion*)
    {attribute 'TcLinkTo' :=  'TIIB[R20_DRL_03_E15_EL1122]^IO Inputs^bDREAM_VRC_DP1_OPENED_LS'}
    bDREAM_VRC_DP1_OPENED_LS AT %Q* : BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>