<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_VAC_GAUGES" Id="{3c226912-98a1-4242-a796-0e3b498cec2e}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
    (*Nozzle Chamber GPI*)
    {attribute 'pytmc' :=' pv: DREAM:NC:GPI:01'}
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_03_E6_EL3174-0002]^AI Standard Channel 1^Value'}
    DREAM_NC_GPI_01 : FB_CVM201;

    {attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[K4S8_DRL_03_E5_EL3174-0002]^AI Standard Channel 1^Value;
                                 .i_xHV_ON			:=	TIIB[K4S8_DRL_03_E4_EL1084]^Channel 3^Input;
                                 .q_xHV_DIS			:=	TIIB[K4S8_DRL_03_E1_EL2624]^Channel 1^Output
    '}

    (*Nozzle Chamber GCC*)
    {attribute 'pytmc' :=' pv: DREAM:NC:GCC:01'}
    DREAM_NC_GCC_01: FB_CCM501;

    (*DP1 GHC*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[K4S8_DRL_03_E5_EL3174-0002]^AI Standard Channel 2^Value;
                                 .i_xHV_ON			:=	TIIB[K4S8_DRL_03_E4_EL1084]^Channel 4^Input;
                                 .q_xHV_DIS			:=	TIIB[K4S8_DRL_03_E1_EL2624]^Channel 2^Output
    '}
    {attribute 'pytmc' :=' pv: DREAM:DP1:GHC:01'}
    DREAM_DP1_GHC_01 : FB_IMG401;

    (*DP1 GPI*)
    {attribute 'pytmc' :=' pv: DREAM:DP1:GPI:01'}
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_03_E6_EL3174-0002]^AI Standard Channel 2^Value'}
    DREAM_DP1_GPI_01 : FB_CVM201;

    (*DP2 GHC*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[K4S8_DRL_03_E5_EL3174-0002]^AI Standard Channel 3^Value;
                                 .i_xHV_ON			:=	TIIB[K4S8_DRL_03_E4_EL1084]^Channel 1^Input;
                                 .q_xHV_DIS			:=	TIIB[K4S8_DRL_03_E1_EL2624]^Channel 3^Output
    '}
    {attribute 'pytmc' :=' pv: DREAM:DP2:GHC:01'}
    DREAM_DP2_GHC_01 : FB_IMG401;

    (*DP3 GHC*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R		:=	TIIB[K4S8_DRL_03_E5_EL3174-0002]^AI Standard Channel 4^Value;
                                 .i_xHV_ON			:=	TIIB[K4S8_DRL_03_E4_EL1084]^Channel 2^Input;
                                 .q_xHV_DIS			:=	TIIB[K4S8_DRL_03_E1_EL2624]^Channel 4^Output
    '}
    {attribute 'pytmc' :=' pv: DREAM:DP3:GHC:01'}
    DREAM_DP3_GHC_01 : FB_IMG401;

    (*MC HOT CATHODE GUAGE*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R_CH1	:=	TIIB[R03_DRL_01_E3_EL3174-0002]^AI Standard Channel 1^Value;
                                 .i_iPRESS_R_CH2	:=	TIIB[R03_DRL_01_E3_EL3174-0002]^AI Standard Channel 2^Value;
                                 .i_xHV_ON			:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 1^Input;
                                 .i_xCH2_SEL		:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 2^Input;
                                 .i_xERR_CH1		:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 3^Input;
                                 .i_xERR_CH2		:=	TIIB[R03_DRL_01_E1_EL1004]^Channel 4^Input;
                                 .q_xHV_DIS_CH1		:=	TIIB[R03_DRL_01_E2_EL2624]^Channel 1^Output;
                                 .q_xHV_DIS_CH2		:=	TIIB[R03_DRL_01_E2_EL2624]^Channel 2^Output
    '}
    {attribute 'pytmc' :=' pv: DREAM:MC:GHC'}
    DREAM_MC_GHC : FB_IE514;
	
    //main chamber global gauge structure - updated based on which channel selected or use pirani if both hot cathode gauges are off
	{attribute 'pytmc' :=' pv: DREAM:MC:GAUGE:01'}
    stDREAM_MC_GAUGE : ST_VG;

    //main chamber GHC gauge structure - updated based on which channel selected or use pirani if both hot cathode gauges are off	
	{attribute 'pytmc' :=' pv: DREAM:MC:GHC:GAUGE:01'}	
	stDREAM_MC_GHC_GAUGE : ST_VG;
	
	//CAT1 chamber global gauge structure - updated based on which channel selected or use pirani if both hot cathode gauges are off
	{attribute 'pytmc' :=' pv: DREAM:CAT1:GAUGE:01'}
    stDREAM_CAT1_GAUGE : ST_VG;

    (*MC GPI*)
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 1^Value'}
    {attribute 'pytmc' := 'pv: DREAM:MC:GPI:01'}
    DREAM_MC_GPI_01 : FB_MKS275;

    (*CATCHER 1*)
    {attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 2^Value;
                                     .i_xHV_ON			:=	TIIB[K4S8_DRL_04_E15_EL1084]^Channel 1^Input;
                                     .q_xHV_DIS			:=	TIIB[K4S8_DRL_04_E14_EL2624]^Channel 1^Output
    '}
    {attribute 'pytmc' :=' pv: DREAM:CAT1:GHC:01'}
    DREAM_CAT1_GHC_01 : FB_IMG401;

    (*CATCHER 2*)
    {attribute 'TcLinkTo' := 	'    .i_iPRESS_R		:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 3^Value;
                                     .i_xHV_ON			:=	TIIB[K4S8_DRL_04_E15_EL1084]^Channel 2^Input;
                                     .q_xHV_DIS			:=	TIIB[K4S8_DRL_04_E14_EL2624]^Channel 2^Output
    '}
    {attribute 'pytmc' :=' pv: DREAM:CAT2:GHC:01'}
    DREAM_CAT2_GHC_01 : FB_IMG401;

    (*ROUGHING PIRANIs*)
    //Micro piranis 925
    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[WALL_E_PPL_01_EP1_EP4374-0002]^AI Inputs Channel 1^Value'}
    {attribute 'pytmc' := 'pv: DREAM:ROUGH1:GPI:01'}
    DREAM_ROUGH1_GPI_01 : FB_9XX;

    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_EP1_EP4374-0002]^AI Inputs Channel 1^Value'}
    {attribute 'pytmc' := 'pv: DREAM:ROUGH1:GPI:02'}
    DREAM_ROUGH1_GPI_02 : FB_9XX;

    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[WALL_E_PPL_01_EP1_EP4374-0002]^AI Inputs Channel 2^Value'}
    {attribute 'pytmc' := 'pv: DREAM:ROUGH2:GPI:01'}
    DREAM_ROUGH2_GPI_01 : FB_9XX;

    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_EP1_EP4374-0002]^AI Inputs Channel 2^Value'}
    {attribute 'pytmc' := 'pv: DREAM:ROUGH2:GPI:02'}
    DREAM_ROUGH2_GPI_02 : FB_9XX;

    {attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_EP2_EP4374-0002]^AI Inputs Channel 1^Value'}
    {attribute 'pytmc' := 'pv: DREAM:ROUGH2:GPI:03'}
    DREAM_ROUGH2_GPI_03 : FB_9XX;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>