<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_HV_ILK" Id="{d0f59b88-3cfc-41d8-b70c-ef6b66a977a9}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_HV_ILK
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*High Voltage Saftey Loop*)
IF GVL_VAC_GAUGES.stDREAM_MC_GHC_GAUGE.xPRESS_OK THEN
    fHighVoltageMaxPressure := 1e-05;
    GVL_PLC_Interface.bHVSafteyLoopEnable := GVL_VAC_GAUGES.stDREAM_MC_GHC_GAUGE.rPRESS <= fHighVoltageMaxPressure;
ELSIF DREAM_MC_GPI_01.PG.xPRESS_OK AND bMCPumpsRunning THEN
    fHighVoltageMaxPressure := 5e-04;
    GVL_PLC_Interface.bHVSafteyLoopEnable := DREAM_MC_GPI_01.PG.rPRESS <= fHighVoltageMaxPressure;
ELSE
    GVL_PLC_Interface.bHVSafteyLoopEnable := FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="PRG_HV_ILK">
      <LineId Id="3" Count="8" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>